--- a/package.json
+++ b/package.json
@@ -7,41 +7,41 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "npx expo build",
+    "build": "npx expo export",
     "eject": "expo eject",
-    "dev": "EXPO_NO_TELEMETRY=true expo start",
+    "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "EXPO_NO_TELEMETRY=1 npx expo export --platform web",
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo-google-fonts/inter": "^0.3.0",
-    "@expo-google-fonts/poppins": "^0.4.0",
-    "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@supabase/supabase-js": "^2.49.8",
-    "expo": "~53.0.9",
-    "expo-asset": "~11.1.5",
-    "expo-file-system": "~18.1.10",
-    "expo-font": "~13.3.1",
-    "expo-image-picker": "~16.1.4",
-    "expo-location": "~18.1.5",
-    "expo-router": "~5.0.7",
-    "expo-splash-screen": "~0.30.8",
-    "expo-status-bar": "~2.2.3",
-    "lucide-react-native": "^0.511.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@supabase/supabase-js": "^2.39.3",
+    "expo": "~52.0.30",
+    "expo-asset": "~9.0.2",
+    "expo-file-system": "~16.0.8",
+    "expo-font": "~11.10.3",
+    "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.5",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "lucide-react-native": "^0.358.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@babel/core": "^7.23.9",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.3.0"
   },
   "private": true
 }
