--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "npx expo export",
+    "build": "npx expo export --platform web",
     "eject": "expo eject",
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "EXPO_NO_TELEMETRY=1 npx expo export --platform web",
